# weld-defect-detect

./: .dockerignore  .gitignore  Dockerfile  README.md  YOLOv8_train.ipynb  ai_weldbot.py  prepare dataset.ipynb  pyproject.toml  requirements.txt  rosatom.yaml  submission.csv
